# meeting

./: .clang-format  CMakeLists.txt  DEVELOPMENT.md  DEVICE_DISCOVERY.md  README.md  build.bat  build.sh
source/: main.cpp
source/core/network/: discovery_service.cpp  discovery_service.h
source/core/util/: common_define.h
source/gui/: discovery_test_window.cpp  discovery_test_window.h  login_window.cpp  login_window.h  main_window.cpp  main_window.h  style_sheet.h
source/player/: openglvideoplayer.cpp  openglvideoplayer.h
source/service/: discovery_service.cpp  discovery_service.h
source/util/: network_util.cpp  network_util.h  video_call_util.cpp  video_call_util.h
